Change FAQ to left justified text to eliminate spacing issues.

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -31,9 +31,9 @@
     display: block;
     max-width: 1000px;
     margin: 1rem 3rem 1rem 3rem;
-    line-height: 1.9;
+    line-height: 1.8;
     font-size: 20px;
-    letter-spacing: 1px;
+    word-spacing: -1px;
     text-align: justify;
 }
 
